<resources>
    <string name="app_name">Cloud5409TourismApp</string>
    <!-- AWS Cognito Configurat>ion parameters  -->
    <string name="cognito_web_domain">cloud-5409-tourism-app.auth.us-east-1.amazoncognito.com</string>
    <string name="cognito_client_id">3pbtvh14d1jl56lgm4pmlpk1ue</string>
    <string name="cognito_client_secret">4kjqpo02ubb41mmfgfotlp3hdfmu6icfec3ee0cu62nlhbfd9ve</string>
    <string name="app_redirect">myapp://www.loginactivity.com/landmarkinfoactivity</string>
<!--    <string name="cognito_web_domain">https://csci5409-tourism.auth.us-east-1.amazoncognito.com</string>-->
<!--    <string name="cognito_client_id">6f4kg60ivm73o8otaqpap92ja</string>-->
<!--    <string name="cognito_client_secret">142ug6hdqspchlj95fdqpciuukm1i11brbco43sh6i7iea39i5m6</string>-->
<!--    <string name="app_redirect">myapp://www.loginactivity.com/landmarkinfoactivity</string>-->

    <string name="proceed_to_booking">Proceed To Booking</string>
    <string name="sign_out">Sign out</string>
    <string name="main_app_name">Cloud 5409 Tourism Application</string>
    <string name="search_places">Search for Places</string>
    <string name="search_any_text">Search by any keyword</string>
    <string name="submit">Submit</string>
    <string name="place_name">Niagara Falls</string>
    <string name="description_name">If there is one destination you’d find in every ‘best places to visit in Canada during summers’ list, it is the Niagara Falls. Built along the spellbinding waterfalls by the same name, this famous city is an ideal place to explore if you’re looking for a magical experience. It is indeed one of the most iconic and best places to visit in Canada. Have a great time enjoying the views and clicking pictures of the cascading falls. You’ll have an unparalleled sightseeing experience when you’ll visit Niagara Falls at night.</string>
    <string name="landmark_info">About Landmark</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
