<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/gps" />


    <TextView
        android:id="@+id/main_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/main_app_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_app_name"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:text="@string/search_places"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/search" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp">

        <AutoCompleteTextView
            android:id="@+id/search_auto_complete_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:hint="@string/search_any_text" />

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_cancel_black_24dp"
            android:scaleType="center" />
    </FrameLayout>
</RelativeLayout>