<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandmarkInfo.LandmarkInfoActivity">

    <ImageView
        android:id="@+id/place_image"
        android:layout_width="199dp"
        android:layout_height="257dp"
        android:layout_marginStart="104dp"
        android:src="@drawable/niagara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/proceed_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="64dp"
        android:width="300dp"
        android:background="@drawable/button_background_1"
        android:text="@string/proceed_to_booking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="412dp"
        android:layout_height="330dp"
        android:background="#F0E9E9"
        android:elevation="12dp"
        android:shape="ring"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/proceed_booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/search_place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/place_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/place_description"
                android:layout_width="381dp"
                android:layout_height="172dp"
                android:layout_below="@+id/search_place_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="39dp"
                android:text="@string/description_name" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>